--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^10.5.0",
     "icons": "^1.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
